# serde_list_repro

./: dune-project  serde_list_repro.opam
dune.lock/: lock.dune  serde.pkg  serde_derive.pkg  serde_json.pkg
lib/: dune
test/: dune
